Commitando scripts anexados ao projeto Laravel

--- a/Docker/laravel/.docker/nginx/nginx.conf
+++ b/Docker/laravel/.docker/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
   root /var/www/public; # A pasta root é /var/www/public
 
   location ~ \.php$ {
-    try_files $uri =404;
+    try_files $uri $uri/ =404;
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass app:9000; # Dedireciona a req. para o PHP fpm, para o rost 'app'
     fastcgi_index index.php;
